[gd_scene load_steps=6 format=1]

[ext_resource path="res://World Map/World_Map_Root.gd" type="Script" id=1]
[ext_resource path="res://World Map/Map.png" type="Texture" id=2]
[ext_resource path="res://World Map/Amur Leopard.png" type="Texture" id=3]
[ext_resource path="res://World Map/Vaquita.png" type="Texture" id=4]
[ext_resource path="res://World Map/Rhino body.png" type="Texture" id=5]

[node name="World_Map_Root" type="Node"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 960, 540 )
transform/scale = Vector2( 1.07, 1.13 )
texture = ExtResource( 2 )

[node name="Leopard_Node2D" type="Node2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="Leopard_Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1504.0
margin/top = 328.0
margin/right = 1627.0
margin/bottom = 451.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 3 )
textures/hover = ExtResource( 3 )
textures/disabled = ExtResource( 3 )
textures/focused = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.03, 0.03 )
params/stretch_mode = 0

[node name="Vaquita_Node2D" type="Node2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="Vaquita_Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 194.0
margin/top = 280.0
margin/right = 317.0
margin/bottom = 403.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 4 )
textures/focused = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 0.03, 0.03 )
params/stretch_mode = 0

[node name="Rhino_Node2D" type="Node2D" parent="."]

transform/pos = Vector2( 1025.71, 609.99 )

[node name="TextureButton" type="TextureButton" parent="Rhino_Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -8.0
margin/top = 4.0
margin/right = 115.0
margin/bottom = 127.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 5 )
textures/hover = ExtResource( 5 )
textures/disabled = ExtResource( 5 )
textures/focused = ExtResource( 5 )
params/resize_mode = 0
params/scale = Vector2( 0.03, 0.03 )
params/stretch_mode = 0

[connection signal="pressed" from="Leopard_Node2D/TextureButton" to="." method="_on_Leopard_pressed"]

[connection signal="pressed" from="Vaquita_Node2D/TextureButton" to="." method="_on_Vaquita_pressed"]

[connection signal="pressed" from="Rhino_Node2D/TextureButton" to="." method="_on_Rhino_pressed"]


